<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SodaCloudSMSExampleClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="content_desc">SMS Bridge</string>
	<string name="textView1_text">Enter server address</string>
	<string name="server_hint">Server IP address</string>
	<string name="server_text">Server IP address…</string>
	<string name="objRef_hint">Obj ref URI</string>
	<string name="objRef_text">ObjRef…</string>
	<string name="scan_text">Or scan to connect…</string>
	<string name="connect_text">Connect</string>
	
	<string name="status_text">Connecting…</string>
</resources>